RESOLVED FIXED 263461
synthesizedBaseline uses incorrect line under edge for vertical-lr and sideways items
https://bugs.webkit.org/show_bug.cgi?id=263461
Summary synthesizedBaseline uses incorrect line under edge for vertical-lr and sidewa...
Sammy Gill
Reported 2023-10-20 12:15:42 PDT
https://drafts.csswg.org/css-align-3/#baseline-export https://drafts.csswg.org/css-writing-modes-4/#line-under The "line under" edge should be item's block start edge in this scenario
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-20 12:15:59 PDT
Sammy Gill
Comment 2 2023-10-20 12:24:03 PDT
Sammy Gill
Comment 3 2023-10-20 12:26:47 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/42671
EWS
Comment 4 2023-10-23 14:36:30 PDT
Committed 269668@main (bc94fc496ea9): <https://commits.webkit.org/269668@main> Reviewed commits have been landed. Closing PR #19356 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.